2019-06-07  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <image>s using the theme file.

2019-06-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <date_input_field>s using the theme file.

2019-06-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <input_field>s using the theme file.

2019-06-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <button>s using the theme file.

	* Create keyboard shortcuts in the theme file, for supported
	elements.

2019-05-31  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <focusable_label>s using the theme file.

2019-05-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Use the singleton template to cache appearance objects, to avoid
	undefined behavior during the global destruction phase.

2019-05-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create <canvas>es using the theme file.

	* Create <label>s using the theme file.

	* Specify tooltips in the theme file, for supported elements.

0.23

2019-05-18  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement API for creating appearance objects from XML theme
	files.

0.22

2019-04-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement an API for XML-based theme files.

	* element_impl.C (elementObj::implObj::scroll_by_parent_container):
	Fix scrolling performance bugs.


2019-04-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* grid_element.C: Use themedim_elementObj for holding individual
	grid cells paddings. This throws an exception immediately if a
	non-existent theme padding value was set.

	* main_window_handler.C: fix handling of edge case when an error
	creates a main window with no size.

0.21

2019-04-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* font and color picker: implement save() and restore().

	* editor_impl.C rewrap_due_to_updated_position: fix scrolling
	of centered input fields.

2019-04-08  Sam Varshavchik  <mrsam@courier-mta.com>

	* No longer necessary to explicitly save() adjustable table column