@@ -1,5 +1,7 @@
 2019-06-07  Sam Varshavchik  <mrsam@courier-mta.com>
 
+	* Create <checkbox>es using the theme file.
+
 	* Create <image>s using the theme file.
 
 2019-06-06  Sam Varshavchik  <mrsam@courier-mta.com>
